# memory-efficient-transformer-pytorch

./: .gitignore  README.md  pyproject.toml  test.py
faster_transformer/: __init__.py
faster_transformer/models/: __init__.py  attention.py  transformer.py
faster_transformer/native/: __init__.py
faster_transformer/native/jax/: __init__.py  core.py  lax.py
faster_transformer/native/jax/_src/: __init__.py  dtypes.py
faster_transformer/utils/: __init__.py  utils.py
memory_efficient_transformer/: __init__.py
memory_efficient_transformer/models/: transformer.py
memory_efficient_transformer/utils/stub/: load_state_dict.py
tests/: test_faster_transformer.py
